# teach-tech

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
graphml/: audience.graphml
integrations/quick-chat/: Cargo.toml
integrations/quick-chat/src/: lib.rs
teach-tech/: Cargo.toml
teach-tech-core/: Cargo.toml
teach-tech-core/src/: auth.rs  db.rs  lib.rs  siblings.rs  users.rs
teach-tech-core/src/auth/: token.rs  user_auth.rs
teach-tech-core/src/users/: admins.rs  instructors.rs  students.rs
teach-tech-web/: package-lock.json  package.json
teach-tech-web/src/lib/: index.ts
teach-tech-web/src/routes/(demo)/: +layout.svelte  +page.svelte
teach-tech-web/src/routes/(demo)/select-institution/: +page.svelte
teach-tech-web/src/routes/[institution]/: +layout.ts  +page.ts
teach-tech-web/src/routes/[institution]/(authenticated)/: +layout.server.ts  +layout.ts
teach-tech-web/src/routes/[institution]/(authenticated)/admin/: +layout.server.ts  +layout.ts  +page.svelte
teach-tech-web/src/routes/[institution]/(authenticated)/admin/invalidate/: +server.ts
teach-tech-web/src/routes/[institution]/(authenticated)/instructor/: +layout.ts
teach-tech-web/src/routes/[institution]/(authenticated)/student/: +layout.server.ts  +layout.ts  +page.svelte
teach-tech-web/src/routes/[institution]/(login)/: +layout.server.ts  +layout.svelte
teach-tech-web/src/routes/[institution]/(login)/admin/login/: +page.svelte  +server.ts
teach-tech-web/src/routes/[institution]/(login)/instructor/login/: +page.svelte
teach-tech-web/src/routes/[institution]/(login)/student/login/: +page.svelte  +server.ts
teach-tech-web/src/routes/[institution]/[role]/invalid/: +page.svelte
teach-tech-web/src/routes/[institution]/[role]/invalidate/: +server.ts
teach-tech-web/src/routes/[institution]/[role]/logout/: +server.ts
teach-tech-web/src/routes/[institution]/errors/institution-error/: +page.svelte
teach-tech-web/src/routes/[institution]/maintenance/: +page.svelte
teach-tech/src/: build.rs  lib.rs  main.rs
