[workspace]
members = ["teach-tech", "teach-tech-core"]
resolver = "2"
exclude = ["test-ws"]


[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
sea-orm = { version = "1.1.1", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"]}
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
axum = { version = "0.7.7", features = ["ws"] }
tokio = { version = "1.41.0", features = ["full"] }
fxhash = "0.2.1"
anyhow = "1.0.93"
tracing = "0.1.40"
unfmt = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }