[workspace]
members = [ "integrations/quick-chat","teach-tech", "teach-tech-core"]
resolver = "2"
exclude = ["test-ws", "teach-tech-web"]


[workspace.dependencies]
teach-tech-core = { path = "teach-tech-core" }

clap = { version = "4.5.20", features = ["derive"] }
sea-orm = { version = "1.1.1", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "debug-print"]}
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
tokio = { version = "1.41.0", features = ["full"] }
fxhash = "0.2.1"
anyhow = "1.0.93"
tracing = "0.1.40"
unfmt = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
crossbeam = "0.8.4"
zeroize = { version = "1.8.1", features = ["serde"] }
tower = "0.5.1"
notify = { version = "7.0.0", features = [] }
serde_json = "1.0.132"
futures = "0.3.31"