[package]
name = "teach-tech-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
clap.workspace = true
axum.workspace = true
axum-extra.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
sea-orm.workspace = true
argon2 = "0.5.3"
subtle = "2.6.1"
rand.workspace = true
chrono = "0.4.38"
crossbeam.workspace = true
tower-http = { version = "0.6.1", features = ["cors", "compression-br", "decompression-br", "trace"]}
sea-orm-migration = "1.1.1"
zeroize.workspace = true