[package]
name = "teach-tech"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true
fxhash.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# unfmt.workspace = true

[dependencies.semver]
version = "1.0.23"
features = ["serde"]
